# codefleet

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
dashboards/: README.md  create_dashboards.py  fleet_overview.ndjson
data/: __init__.py  seed.py  seed_activity.json  seed_agents.json  seed_tasks.json
docs/: PRD.md  TECHNICAL_SPEC.md
elastic/: mcp_config.json
elastic/agents/: fleet_commander.json  task_planner.json
elastic/indices/: activity.json  agents.json  changes.json  conflicts.json  tasks.json
elastic/setup/: __init__.py  config.py  create_agents.py  create_indices.py  create_tools.py  create_workflows.py
elastic/tools/: analyze_dependencies.json  assign_task.json  check_agent_status.json  create_task.json  detect_conflicts.json  find_similar_tasks.json  review_completed.json  search_backlog.json
elastic/workflows/: agent_completion.yaml  auto_assign_tasks.yaml  conflict_detection.yaml  create_task.yaml  handle_stale_agents.yaml  handle_task_completion.yaml  task_assignment.yaml
scripts/: setup_all.py  test_agent_chat.py  test_esql_tools.py  test_write_flow.py
src/: __init__.py  models.py
src/cli/: __init__.py  main.py
src/config/: __init__.py  constants.py  settings.py
src/runners/: __init__.py  base.py  claude_runner.py  manager.py
tests/: __init__.py  conftest.py  test_claude_runner.py  test_e2e.py  test_integration.py  test_models.py  test_runner_base.py
